--- a/CMusicPlayer/App.xaml
+++ b/CMusicPlayer/App.xaml
@@ -2,13 +2,21 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CMusicPlayer"
-             Startup="AppStart">
+             Startup="AppStart"
+             ShutdownMode="OnLastWindowClose"
+             Exit="OnExit">
     <Application.Resources>
          <ResourceDictionary>
              <ResourceDictionary.MergedDictionaries>
                  <ResourceDictionary Source="Styles/TransparentButton.xaml"/>
                  <ResourceDictionary Source="Styles/NoHoverButton.xaml"/>
-             </ResourceDictionary.MergedDictionaries>
+                 <ResourceDictionary Source="Styles/Menu.xaml"/>
+                 <ResourceDictionary Source="Styles/TabItem.xaml"/>
+                 <ResourceDictionary Source="Styles/Label.xaml"/>
+                 <ResourceDictionary Source="Styles/Colours.xaml"/>
+                 <ResourceDictionary Source="Styles/Grid.xaml"/>
+                 <ResourceDictionary Source="Styles/Templates/GridTemplate.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
          </ResourceDictionary>
     </Application.Resources>
 </Application>
