--- a/CMusicPlayer/UI/ApplicationBar/ApplicationBar.xaml
+++ b/CMusicPlayer/UI/ApplicationBar/ApplicationBar.xaml
@@ -5,9 +5,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" 
              d:DesignHeight="25" d:DesignWidth="800">
-    <UserControl.Resources>
-
-    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
@@ -35,7 +32,7 @@
                     Height="18" 
                     Click="OnMaximizeClicked">
                 <Canvas HorizontalAlignment="Left" Width="8" Height="8">
-                    <Rectangle Width="10" Height="10" Stroke="#EEE" StrokeThickness="1."/>
+                    <Rectangle Width="10" Height="10" Stroke="#EEE" StrokeThickness="1"/>
                 </Canvas>
             </Button>
             <Button Height="18" 
