--- a/CMusicPlayer/App.xaml
+++ b/CMusicPlayer/App.xaml
@@ -2,9 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CMusicPlayer"
-             Startup="AppStart"
-             ShutdownMode="OnLastWindowClose"
-             Exit="OnExit">
+             Startup="AppStart">
     <Application.Resources>
          <ResourceDictionary>
              <ResourceDictionary.MergedDictionaries>
@@ -19,6 +17,8 @@
                  <ResourceDictionary Source="Styles/Templates/GridTemplate.xaml"/>
                  <ResourceDictionary Source="Styles/Templates/SliderTemplate.xaml"/>
                  <ResourceDictionary Source="Styles/Slider.xaml" />
+                 <ResourceDictionary Source="Styles/ContextMenu.xaml"/>
+                 <ResourceDictionary Source="Styles/Templates/ContextMenuTemplate.xaml"/>
              </ResourceDictionary.MergedDictionaries>
          </ResourceDictionary>
     </Application.Resources>
