--- a/CMusicPlayer/Styles/Grid.xaml
+++ b/CMusicPlayer/Styles/Grid.xaml
@@ -1,13 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Key="GridStyle" TargetType="DataGrid">
+    <Style TargetType="DataGrid">
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="IsReadOnly" Value="True"/>
         <Setter Property="GridLinesVisibility" Value="None"/>
         <Setter Property="IsTextSearchEnabled" Value="True"/>
         <Setter Property="FontSize" Value="11.5"/>
+        <Setter Property="Template" Value="{DynamicResource DataGridControlTemplate}"/>
     </Style>
 
 
