--- a/CMusicPlayer/UI/Music/Queue/QueueView.xaml
+++ b/CMusicPlayer/UI/Music/Queue/QueueView.xaml
@@ -4,11 +4,70 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CMusicPlayer.UI.Music.Queue"
+      xmlns:converters="clr-namespace:CMusicPlayer.Util.Converters"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="QueueView" x:ClassModifier="internal">
-
-    <Grid>
-        
+    <Page.Resources>
+        <converters:TimeConverter x:Key="TimeConverter" />
+    </Page.Resources>
+    <Grid Background="{StaticResource DefaultColor}">
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="30"/>
+        </Grid.RowDefinitions>
+        <DataGrid
+            Name="TracksListView"
+            HeadersVisibility="Column"
+            AutoGenerateColumns="False" 
+            RowStyle="{StaticResource RowStyle}"
+            ColumnHeaderStyle="{StaticResource ColumnHeaderStyle}"
+            TextSearch.Text="ArtistModel"
+            HorizontalScrollBarVisibility="Visible"
+            ItemsSource="{Binding Queue}" 
+            AllowDrop="True"
+            SelectionMode="Single"
+            Drop="OnDrop"
+            MouseLeftButtonDown="OnPreviewMouseDown"
+            Template="{DynamicResource DataGridControlTemplate}">
+            <DataGrid.Resources>
+                <Style TargetType="ScrollBar">
+                    <!--     <Setter Property="Foreground" Value="#222222" /> -->
+                    <!--     <Setter Property="Background" Value="#444444" /> -->
+                    <!-- <Setter Property="BorderThickness" Value="0" /> -->
+                </Style>
+            </DataGrid.Resources>
+            <DataGrid.ContextMenu>
+                <ContextMenu Background="Black" Opacity="0.4">
+                    <MenuItem Header="Properties" Click="OnViewPropertiesClicked" />
+                    <MenuItem Header="To Album" Click="OnToAlbum"/>
+                    <MenuItem Header="To Artist" Click="OnToArtist"/>
+                </ContextMenu>
+            </DataGrid.ContextMenu>
+            <DataGrid.Columns>
+                <DataGridTextColumn
+                    Header="Title"
+                    Binding="{Binding Title}"
+                    Width="400">
+                </DataGridTextColumn>
+                <DataGridTextColumn
+                    Header="Album"
+                    Binding="{Binding Album}"/>
+                <DataGridTextColumn
+                    Header="Artist"
+                    Binding="{Binding Artist}"/>
+                <DataGridTextColumn
+                    Header="Duration"
+                    Binding="{Binding Duration, Converter={StaticResource TimeConverter}, Mode=OneWay}" />
+                <DataGridTextColumn
+                    Header="Genre"
+                    Binding="{Binding Genre}" />
+                <DataGridTextColumn
+                    Header="Encoding"
+                    Binding="{Binding Encoding}" />
+            </DataGrid.Columns>
+        </DataGrid>
+        <Label Grid.Row="1" Content="{Binding Queue.Count}" 
+               ContentStringFormat="Number Of Tracks: {0}" Foreground="White"/>
     </Grid>
 </Page>
