--- a/CMusicPlayer/UI/Music/Shared/TrackListControl.xaml
+++ b/CMusicPlayer/UI/Music/Shared/TrackListControl.xaml
@@ -19,9 +19,8 @@
                 <RowDefinition />
                 <RowDefinition Height="30"/>
             </Grid.RowDefinitions>
-            <!-- <local:PlaybackControl x:Name="PlaybackControl" Grid.Row="0" /> -->
-            <DataGrid
-            Style="{StaticResource GridStyle}"
+            <local:PlaybackControl x:Name="PlaybackControl" Grid.Row="0" />
+        <DataGrid 
             Name="TracksListGrid"
             MouseDoubleClick="OnTrackDoubleClicked"
             HeadersVisibility="Column"
@@ -30,66 +29,61 @@
             ColumnHeaderStyle="{StaticResource ColumnHeaderStyle}"
             HorizontalScrollBarVisibility="Visible"
             ItemsSource="{Binding TrackList}" 
-            Template="{DynamicResource DataGridControlTemplate}"
             Grid.Row="1">
                 <DataGrid.Resources>
                     <Style TargetType="ScrollBar">
-                        <!--     <Setter Property="Foreground" Value="#222222" /> -->
-                        <!--     <Setter Property="Background" Value="#444444" /> -->
-                        <!-- <Setter Property="BorderThickness" Value="0" /> -->
+                            <Setter Property="Foreground" Value="#222222" />
+                            <Setter Property="Background" Value="#444444" />
+                        <Setter Property="BorderThickness" Value="0" />
                     </Style>
                 </DataGrid.Resources>
-                <!-- <DataGrid.ContextMenu> -->
-                <!--     <ContextMenu> -->
-                <!--         <MenuItem Header="Add To Queue" Click="OnAddToQueueClicked"/> -->
-                <!--         <MenuItem Header="Play Next" Click="OnPlayNextClicked"/> -->
-                <!--         <MenuItem Header="Properties" Click="OnViewPropertiesClicked"/> -->
-                <!--         <MenuItem Header="To Album" Click="OnToAlbum"/> -->
-                <!--         <MenuItem Header="To Artist" Click="OnToArtist"/> -->
-                <!--     </ContextMenu> -->
-                <!-- </DataGrid.ContextMenu> -->
+                <DataGrid.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Add To Queue" Click="OnAddToQueueClicked"/>
+                        <MenuItem Header="Play Next" Click="OnPlayNextClicked"/>
+                        <MenuItem Header="Properties" Click="OnViewPropertiesClicked"/>
+                        <MenuItem Header="To Album" Click="OnToAlbum"/>
+                        <MenuItem Header="To Artist" Click="OnToArtist"/>
+                    </ContextMenu>
+                </DataGrid.ContextMenu>
                 <DataGrid.Columns>
                     <DataGridTextColumn
-                    Header="Title"
-                    Binding="{Binding Title}"
-                    Width="400" />
+                        Header="Title"
+                        Binding="{Binding Title}"
+                        Width="400" />
                     <DataGridTextColumn
-                    Header="Album"
-                    Binding="{Binding Album}"/>
+                        Header="Album"
+                        Binding="{Binding Album}"/>
                     <DataGridTextColumn
-                    Header="Artist"
-                    Binding="{Binding Artist}"/>
+                        Header="Artist"
+                        Binding="{Binding Artist}"/>
                     <DataGridTextColumn
-                    Header="Duration"
-                    Binding="{Binding Duration, Converter={StaticResource TimeConverter}, Mode=OneWay}" />
+                        Header="Duration"
+                        Binding="{Binding Duration, Converter={StaticResource TimeConverter}, Mode=OneWay}" />
                     <DataGridTextColumn
-                    Header="Genre"
-                    Binding="{Binding Genre}" />
+                        Header="Genre"
+                        Binding="{Binding Genre}" />
                     <DataGridTextColumn
-                    Header="Bitrate"
-                    Binding="{Binding BitRate}" />
+                        Header="Bitrate"
+                        Binding="{Binding BitRate}" />
                     <DataGridTextColumn
-                    Header="BitDepth"
-                    Binding="{Binding BitDepth}" />
+                        Header="#"
+                        Binding="{Binding TrackNumber}"/>
                     <DataGridTextColumn
-                    Header="#"
-                    Binding="{Binding TrackNumber}"/>
+                        Header="Year"
+                        Binding="{Binding Year, StringFormat=0;;#}"/>
                     <DataGridTextColumn
-                    Header="Encoding"
-                    Binding="{Binding Encoding}" />
+                        Header="SampleRate"
+                        Binding="{Binding SampleRate, StringFormat=0;;#}"/>
                     <DataGridTextColumn
-                    Header="Year"
-                    Binding="{Binding Year}"/>
-                    <DataGridTextColumn
-                    Header="SampleRate"
-                    Binding="{Binding SampleRate}"/>
-                </DataGrid.Columns>
+                        Header="Encoding"
+                        Binding="{Binding Encoding}" />
+            </DataGrid.Columns>
             </DataGrid>
-            <StackPanel 
-            Orientation="Horizontal"
-            Grid.Row="2">
-                <general:SearchControl x:Name="SearchControl" TextChanged="SearchTextChanged"/>
-                <Label Content="{Binding TrackList.Count}" ContentStringFormat="Number of Tracks: {0}" Foreground="White"/>
-            </StackPanel>
+        <StackPanel Orientation="Horizontal"
+                    Grid.Row="2">
+            <general:SearchControl x:Name="SearchControl" TextChanged="SearchTextChanged"/>
+            <Label Content="{Binding TrackList.Count}" ContentStringFormat="Number of Tracks: {0}" Foreground="White"/>
+        </StackPanel>
     </Grid>
 </UserControl>
