--- a/CMusicPlayer/Styles/Templates/GridTemplate.xaml
+++ b/CMusicPlayer/Styles/Templates/GridTemplate.xaml
@@ -1,6 +1,87 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <Color x:Key="TransparentColor">Transparent</Color>
+
+    <!--Style and template for the button in the upper left corner of the DataGrid (Just made everything transparent lol?).-->
+    <Style TargetType="{x:Type Button}"
+      x:Key="DataGridSelectAllButtonStyle">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Grid>
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="MouseOver">
+                                    <Storyboard>
+                                        <ColorAnimationUsingKeyFrames Storyboard.TargetName="Border"
+                                                Storyboard.TargetProperty="(Shape.Fill).
+                      (GradientBrush.GradientStops)[1].(GradientStop.Color)">
+                                            <EasingColorKeyFrame KeyTime="0"
+                                         Value="{StaticResource TransparentColor}" />
+                                        </ColorAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="Pressed">
+                                    <Storyboard>
+                                        <ColorAnimationUsingKeyFrames Storyboard.TargetName="Border"
+                                                Storyboard.TargetProperty="(Shape.Fill).
+                      (GradientBrush.GradientStops)[1].(GradientStop.Color)">
+                                            <EasingColorKeyFrame KeyTime="0"
+                                         Value="{StaticResource TransparentColor}" />
+                                        </ColorAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="Disabled">
+                                    <Storyboard>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)"
+                                                 Storyboard.TargetName="Arrow">
+                                            <DiscreteObjectKeyFrame KeyTime="0"
+                                            Value="{x:Static Visibility.Collapsed}" />
+                                        </ObjectAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                        <Rectangle x:Name="Border"
+                     SnapsToDevicePixels="True">
+                            <Rectangle.Stroke>
+                                <LinearGradientBrush EndPoint="0.5,1"
+                                   StartPoint="0.5,0">
+                                    <GradientStop Color="{StaticResource TransparentColor}"
+                              Offset="0" />
+                                    <GradientStop Color="{StaticResource TransparentColor}"
+                              Offset="1" />
+                                </LinearGradientBrush>
+                            </Rectangle.Stroke>
+                            <Rectangle.Fill>
+                                <LinearGradientBrush EndPoint="0.5,1"
+                                   StartPoint="0.5,0">
+                                    <GradientStop Color="{StaticResource TransparentColor}"
+                              Offset="0" />
+                                    <GradientStop Color="{StaticResource TransparentColor}"
+                              Offset="1" />
+                                </LinearGradientBrush>
+                            </Rectangle.Fill>
+                        </Rectangle>
+                        <Polygon x:Name="Arrow"
+                   HorizontalAlignment="Right"
+                   Margin="8,8,3,3"
+                   Opacity="0.15"
+                   Points="0,10 10,10 10,0"
+                   Stretch="Uniform"
+                   VerticalAlignment="Bottom">
+                            <Polygon.Fill>
+                                <SolidColorBrush Color="{StaticResource TransparentColor}" />
+                            </Polygon.Fill>
+                        </Polygon>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <!-- GRID -->
     <ControlTemplate x:Key="DataGridControlTemplate" TargetType="{x:Type DataGrid}">
         <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}" SnapsToDevicePixels="True">
@@ -18,7 +99,8 @@
                                 <RowDefinition Height="*"/>
                                 <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
-                            <Button Command="ApplicationCommands.SelectAll" Focusable="False" Style="{DynamicResource {ComponentResourceKey ResourceId=DataGridSelectAllButtonStyle, TypeInTargetAssembly={x:Type DataGrid}}}" Width="{Binding CellsPanelHorizontalOffset, RelativeSource={RelativeSource FindAncestor, AncestorLevel=1, AncestorType={x:Type DataGrid}}}">
+                            <!-- Do Not Remove The Style Property Of Select All Button, makes grid freeze when item source is empty???-->
+                            <Button Command="ApplicationCommands.SelectAll" Focusable="False" Style="{StaticResource DataGridSelectAllButtonStyle}" Width="{Binding CellsPanelHorizontalOffset, RelativeSource={RelativeSource FindAncestor, AncestorLevel=1, AncestorType={x:Type DataGrid}}}">
                                 <!-- <Button.Visibility> -->
                                 <!--     <Binding Path="HeadersVisibility" RelativeSource="{RelativeSource FindAncestor, AncestorLevel=1, AncestorType={x:Type DataGrid}}"> -->
                                 <!--         <Binding.ConverterParameter> -->
@@ -58,5 +140,8 @@
             </ScrollViewer>
         </Border>
     </ControlTemplate>
+
+
+   
 
 </ResourceDictionary>
